[package]
name = "wpik-zbiorywalizacja"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.7"
base32 = "0.5.1"
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.9.2"
rand08 = { version = "0.8.5", package = "rand" }
rusqlite = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
